# Munki-Manifest-Generator

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-publish.yml
munki_manifest_generator/: env_vars.py  get_device_catalogs.py  logger.py  main.py  manifest.py
munki_manifest_generator/azstorage/: az_storage_actions.py  az_storage_clients.py
munki_manifest_generator/graph/: concurrent_batch.py  get_authentication_token.py  get_device_group_membership.py  get_user_group_membership.py  make_api_request.py  obtain_access_token.py
