[metadata]
name = Munki-Manifest-Generator
version = 1.1.0
author = Tobias Almén
author_email = almenscorner@outlook.com
description = Tool to create and update Munki manifests for devices managed in Intune
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/almenscorner/munki-manifest-generator
project_urls =
    Bug Tracker = https://github.com/almenscorner/munki-manifest-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    msal >= 1.20.0
    msrest>=0.6.21
    azure-storage-blob >= 12.13.1

[options.entry_points]
console_scripts =
    munki-manifest-generator = munki_manifest_generator.main:main